# llmops-studio

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  environment.yml  projects.yaml  pyproject.toml
.github/workflows/: ci.yml
datasets/golden/: golden_dataset.json
docs/: diagram1.mmd
src/llmops_studio/: api.py  app.py
src/llmops_studio/core/: engine.py  node.py  project_registry.py
src/llmops_studio/registry/: __init__.py  agentic_nodes.py  evaluation_nodes.py
tests/: test_dag_execution.py  test_project_registry.py
